Fix z-index of backdrops. Adjust elements in hoe screen. Add placeholder texts for when there are no notifications or essays.

--- a/src/app/essay/create-essay/create-essay.component.scss
+++ b/src/app/essay/create-essay/create-essay.component.scss
@@ -6,6 +6,7 @@
 .backdrop {
     background-color: rgba(0,0,0,0.6);
     position: fixed;
+    z-index: 1;
     top: 0;
     left: 0;
     width: 100%;
